# webserver-for-demo

./: Makefile  README.md  make.bat  pyproject.toml  requirements-dev.txt  requirements.txt
containers/: Containerfile
docs/: conf.py  index.rst
tests/: conftest.py
tests/data/: README.md
webserver_for_demo/: __init__.py  version.py  web_app.py  webserver_for_demo_cli.py
webserver_for_demo/routers/: example.py  hello_world.py
webserver_for_demo/templates/: base.jinja2  index.jinja2
webserver_for_demo/utils/: logger.py
